--- a/styles.css
+++ b/styles.css
@@ -224,13 +224,14 @@ textarea {
    ============================== */
 
 .contact {
-    background-color: #525252; 
+    background-color: #131313; 
     color: #ffffff; 
     padding: 5px 10px; 
     border-radius: 12px;
-    font-weight: bold; 
     font-size: 0.9em; 
-    padding: 10px;
+    padding: 15px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+    margin: 10px 0;
 }
 
 .contact-body {
