--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ body {
    
 .input-label {
     display: block;
-    margin-top: 10px; 
+    margin-top: 15px; 
     color: #fff;
     margin-bottom: 5px;
 }
@@ -155,6 +155,11 @@ select {
     border: 1px solid #444;
     border-radius: 12px; /* Consistent with other elements */
     box-sizing: border-box;
+    transition: background-color 0.3s ease;
+}
+
+select:hover {
+    background-color: #444
 }
 
 select option {
@@ -270,7 +275,7 @@ textarea {
 /* Fade-in effect for new contact fields */
 .fade-in {
     opacity: 0;
-    transition: opacity 0.3s ease;
+    transition: opacity 0.6s ease;
 }
 
 .fade-in.show {
